Adding a svg map to an html page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1> Hello world </h1>
+<link rel="stylesheet" type="text/css" href="map.css" />
+<div>
+<h1>Wuhan virus (COVID-19) statics in Malaysia</h1>
+<div class="svg-container">
+	<!-- <svg> -->
+		<img id="malaysia-map" src="Blank_malaysia_map_interactive.svg"/>
+	<!-- </svg> -->
+</div>
+
+
