--- a/index.html
+++ b/index.html
@@ -1,10 +1,60 @@
-<link rel="stylesheet" type="text/css" href="map.css" />
-<div>
+<!DOCTYPE html>
+<head>
+	<link rel="stylesheet" type="text/css" href="map.css" />
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
+	<script src="./jquery.csv.min.js"></script>
+    <script type="text/javascript">
+		google.load("visualization", "1", {packages:["corechart"]});
+		google.setOnLoadCallback(drawChart);
+		$(window).resize(function(){
+			drawChart();
+			$(window).resize(drawChart);
+			var mapHeight = document.getElementById("malaysia-map").style.height;
+			document.getElementById('graph').style.height = mapHeight;
+		});
+		function drawChart() {
+			$.get("./data/dailyTotal.csv", function(csvString) {
+				<!-- var transData = [['Date', 'All visitors', 'New user', 'Mobile traffic']]; -->
+				var arrayData = $.csv.toArrays(csvString, {onParseValue: $.csv.hooks.castToScalar});
+				for(var i = 0; i < arrayData.length; ++i)	{
+					arrayData[i][0] = new Date(arrayData[i][0]);
+				}
+				var data = new google.visualization.arrayToDataTable(arrayData);
+				var options =
+				{
+					title: 'Company Performance',
+					chartArea: {
+						left: '10%',
+						top: '20%',
+						width: '80%',
+						height: '70%'
+					},
+					hAxis: {
+						format: 'dd-MMM'
+					},
+					legend: {
+						position: 'top',
+						maxLines: 3
+					},
+					vAxis: {
+						minValue: new Date("01/01/2020")
+					},
+					witdh: '100%',
+					height: $(window).height()*0.6953
+				};
+				var formatter = new google.visualization.DateFormat({pattern: 'dd-MMM'});
+				formatter.format(data, 0);
+				var chart = new google.visualization.LineChart(document.getElementById('graph'));
+				chart.draw(data, options);
+			});
+		}
+    </script>
+</head>
 <h1>Wuhan virus (COVID-19) statics in Malaysia</h1>
 <div class="svg-container">
-	<!-- <svg> -->
-		<img id="malaysia-map" src="Blank_malaysia_map_interactive.svg"/>
-	<!-- </svg> -->
+	<div><img id="malaysia-map" src="Blank_malaysia_map_interactive.svg"/></div>
+    <div id="graph"></div>
 </div>
 
 
