--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="map.css" />
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
 	<script src="./jquery.csv.min.js"></script>
     <script type="text/javascript">
 		google.load("visualization", "1", {packages:["corechart"]});
