--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 						format: 'dd-MMM'
 					},
 					vAxis: {
-						title: "Cases",
+						title: "Cumulative cases",
 						minorGridlines: { count:0 },
 						scaleType: logScale ? 'log' : 'null',
 						viewWindow: {
