--- a/index.html
+++ b/index.html
@@ -458,5 +458,17 @@
 <div id="wrapper3">
 	<div id="bystate-dynamics"></div>
 </div>
+<br>
+<br>
+<div id="reference">
+Reference:
+<ul>
+	<li>Official Portal Ministry of Health Malaysia COVID-10 (Media Centre)<br> 
+	<a href="http://www.moh.gov.my/index.php/pages/view/2019-ncov-wuhan-kenyataan-akhbar">http://www.moh.gov.my/index.php/pages/view/2019-ncov-wuhan-kenyataan-akhbar</a></li>
+	<li>2020 coronavirus pandemic in Malaysia<br>
+	<a href="">https://en.wikipedia.org/wiki/2020_coronavirus_pandemic_in_Malaysia</a></li>
+	<li>Covid-19: Current situation in Malaysia (updated daily)<br>
+	<a href="">https://www.thestar.com.my/news/nation/2020/03/23/covid-19-current-situation-in-malaysia-updated-daily</a></li>
+</ul>
 </body>
 
